[gd_scene load_steps=5 format=3 uid="uid://deb3uvs2c78ml"]

[ext_resource type="Script" path="res://characters/npcs/testNpc/test_npc.gd" id="1_bkxwg"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4j3jm"]
size = Vector2(16, 16)

[sub_resource type="CircleShape2D" id="CircleShape2D_wxj1n"]
radius = 18.1108

[sub_resource type="PlaceholderTexture2D" id="PlaceholderTexture2D_re3cb"]

[node name="test_npc" type="CharacterBody2D"]
script = ExtResource("1_bkxwg")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_4j3jm")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_wxj1n")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(16, 16)
texture = SubResource("PlaceholderTexture2D_re3cb")

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
[connection signal="input_event" from="Area2D" to="." method="_on_area_2d_input_event"]
